@@ -1,6 +1,7 @@
 0.06
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SEE ALSO section in doc.
+ - Move author tests to xt/ directory.
  - Remove obsolete item from SEE ALSO section in doc.
  - Update Module::Install to 1.16 version.
  - Update copyright years.
